# Experiments

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  poetry.toml  pyproject.toml
advent-of-code/: .isort.cfg  Dockerfile  Makefile  README.md  app.py  cloudbuild.yaml  day_n.py  input.txt  pyproject.toml  solution.py
advent-of-code/src/: __init__.py  types.py  utils.py
advent-of-code/src/advent_of_code/: utils.py
advent-of-code/src/year_2022/: __init__.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py
advent-of-code/src/year_2023/: __init__.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
advent-of-code/tests/: fixtures.py  types.py
advent-of-code/tests/year_2022/day_1/: test.py
advent-of-code/tests/year_2022/day_2/: test.py
advent-of-code/tests/year_2022/day_3/: test.py
advent-of-code/tests/year_2022/day_4/: test.py
advent-of-code/tests/year_2022/day_5/: test.py
advent-of-code/tests/year_2022/day_6/: test.py
advent-of-code/tests/year_2022/day_7/: test.py
advent-of-code/tests/year_2023/day_1/: test.py
advent-of-code/tests/year_2023/day_10/: example-4.txt  example.txt  test.py
advent-of-code/tests/year_2023/day_11/: test.py
advent-of-code/tests/year_2023/day_12/: test.py
advent-of-code/tests/year_2023/day_13/: test.py
advent-of-code/tests/year_2023/day_14/: test.py
advent-of-code/tests/year_2023/day_15/: test.py
advent-of-code/tests/year_2023/day_16/: example-4.txt  example-5.txt  example-7.txt  example-8.txt  test.py
advent-of-code/tests/year_2023/day_17/: example-2.txt  test.py
advent-of-code/tests/year_2023/day_18/: test.py
advent-of-code/tests/year_2023/day_19/: test.py
advent-of-code/tests/year_2023/day_2/: test.py
advent-of-code/tests/year_2023/day_20/: test.py
advent-of-code/tests/year_2023/day_21/: example-3.txt  input-p2-br.txt  input-p2-r.txt  input-p2-tl.txt  input-p2-tr.txt  test.py
advent-of-code/tests/year_2023/day_22/: test.py
advent-of-code/tests/year_2023/day_23/: example-2.txt  test.py
advent-of-code/tests/year_2023/day_24/: test.py
advent-of-code/tests/year_2023/day_25/: test.py
advent-of-code/tests/year_2023/day_3/: test.py
advent-of-code/tests/year_2023/day_4/: test.py
advent-of-code/tests/year_2023/day_5/: test.py
advent-of-code/tests/year_2023/day_6/: test.py
advent-of-code/tests/year_2023/day_7/: test.py
advent-of-code/tests/year_2023/day_8/: input.txt  test.py
blog/: Dockerfile  Makefile  app.py  cloudbuild.yaml  mkdocs.yaml  pyproject.toml  template-aoc.md  template-aot.md
blog/docs/: index.md  my-freight-cube.md  react-in-mkdocs.md  resume.md
blog/docs/advent-of-typescript/: index.md
blog/docs/css/: images.css
blog/docs/extras/: blog-components.css  blog-components.js  nav.css
blog/docs/projects/: my-freight-cube.md  react-in-mkdocs.md
blog/overrides/: main.html
control/: Makefile  docker-compose.yaml  pyproject.toml
control/app_advent_of_code/: apps.py
control/app_blog/: apps.py  urls.py
control/app_my_freight_cube/: apps.py  urls.py
control/app_users/: apps.py
control/app_users/migrations/: 0001_initial.py
control/app_users/models/: users.py
control/server/: env_settings.py  settings.py  urls.py
control/utils/: http.py  models.py
experiments/full-text-search/: README.md  alembic.ini  docker-compose.yaml  pyproject.toml
experiments/full-text-search/alembic/: env.py
experiments/full-text-search/src/: cli.py  main.py  models.py  settings.py  sql.py  test_search.py
flotion/: Makefile  (+7 more)
(+222 files in other folders)
