[tool.poetry]
name = "fletcheaston"
version = "0.1.0"
description = ""
authors = ["Fletcher Easton <work@fletcheaston.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
