[tool.setuptools]
py-modules = []

[project]
name = "advent-of-code"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "numpy==1.26.2",
    "python-multipart==0.0.6",
    "uvicorn==0.24.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "httpx==0.25.2",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
]

[tool.pytest.ini_options]
python_files = [
    "test.py",
]
python_functions = [
    "test_",
]
