[tool.setuptools]
py-modules = []

[project]
name = "blog"
description = "A personal blog for my projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "jinja2==3.1.2",
    "mkdocs==1.5.3",
    "mkdocs-material==9.4.14",
    "mkdocs-material-extensions==1.3",
    "uvicorn==0.24.0",
]
dynamic = ["version"]
