[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Fletcher Easton <work@fletcheaston.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
aenum = "^3.1.15"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
