[tool.setuptools]
py-modules = []

[project]
name = "Full Text Search"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.12.1",
    "fastapi==0.104.1",
    "psycopg==3.1.12",
    "psycopg-binary==3.1.12",
    "pydantic-settings==2.0.3",
    "python-dateutil==2.8.2",
    "SQLAlchemy==2.0.23",
    "typer==0.9.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
]

[tool.pytest.ini_options]
python_functions = [
    "test_",
]
